<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.wajahatkarim.tipcalculator.viewmodel.CalculatorViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutCalculationInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.MainActivity"
        tools:showIn="@layout/activity_main">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputCheckAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/txtCheckAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.inputCheckAmount}"
                android:hint="Check"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputTipPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/inputCheckAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/txtTipPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.inputTipPercentage}"
                android:hint="Tip Percentage"
                android:inputType="number"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layoutCalculationOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputTipPercentage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtBillPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@{vm.outputCheckAmount}"
                    style="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Check"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtTipAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@{vm.outputTipAmount}"
                    style="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tip"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtGrandTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@{vm.outputTotalDollarAmount}"
                    style="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>